commit #4 - final minor updates made to css

--- a/Loomit2/css/custom.css
+++ b/Loomit2/css/custom.css
@@ -1,10 +1,10 @@
 @import url('https://fonts.googleapis.com/css?family=Raleway|Work+Sans');
 /*
-
+    Primary Font:
     font-family: 'Work Sans', sans-serif;
 
+    Secondary Font:
     font-family: 'Raleway', sans-serif;
-
 */
 
 
